--- a/src/components/Main/Login/Login.css
+++ b/src/components/Main/Login/Login.css
@@ -1,19 +1,19 @@
-.login-screen {
+.main-screen {
   width: 100%;
   height: 100%;
   display: flex;
   align-items: center;
   justify-content: center;
 }
-.login-screen .background {
+.background {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
 }
 .login-form {
-  width: calc(100% - 32px);
-  height: calc(100% - 32px);
+  width: 100%;
+  height: 100%;
   border-radius: 1rem;
 }
 .login-form > * {
