added animals description

--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
 :root {
   --main-color: #f2b830;
   --main-color-background: #fdf4df;
+  --secondary-color-background: #f7f4ee;
   --main-color-disabled: #f6e1b1;
   --main-color-transparent: #f2b83044;
 
