--- a/src/components/Main/Results/Results.css
+++ b/src/components/Main/Results/Results.css
@@ -2,6 +2,7 @@
   box-sizing: border-box;
   padding: 8px;
   background: var(--secondary-color-background);
+  overflow: scroll;
 }
 .wheel-container {
   max-width: 400px;
