--- a/src/components/Main/Login/Login.css
+++ b/src/components/Main/Login/Login.css
@@ -4,21 +4,25 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: auto;
 }
 .background {
   width: 100%;
   height: 100%;
   object-fit: cover;
   object-position: center center;
+  top: 0;
+  left: 0;
+  position: fixed;
 }
 .login-form {
   width: 100%;
   height: 100%;
+  max-width: 320px;
   border-radius: 1rem;
 }
 .login-form > * {
-  width: 72%;
-  max-width: 320px;
+  width: 100%;
   box-sizing: border-box;
 }
 .login-form .title {
@@ -47,4 +51,16 @@
 }
 .login-form > button {
   margin-top: 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .main-screen {
+    padding: 32px 0;
+  }
+  .login-form {
+    padding: 32px;
+    height: 80%;
+    box-shadow: 0px 0px 3px 2px #00000011;
+    background: #ffffff88;
+  }
 }
