--- a/src/components/Main/Process/Process.css
+++ b/src/components/Main/Process/Process.css
@@ -1,6 +1,10 @@
 .progress-screen {
   box-sizing: border-box;
   padding: 8px;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
 }
 .top-section {
   color: #757575;
@@ -8,6 +12,7 @@
 }
 .top-section i {
   padding: 4px;
+  cursor: pointer;
 }
 .title {
   font-size: 22px;
@@ -22,6 +27,7 @@
   box-sizing: border-box;
   background: #fff;
   font-weight: 600;
+  cursor: pointer;
 }
 .option.selected {
   border-color: var(--main-color);
@@ -60,4 +66,22 @@
 }
 .popup-content {
   text-align: center;
+}
+
+@media screen and (min-width: 768px) {
+  .progress-screen {
+    padding: 8px;
+    height: auto;
+    /* margin: 24px 0; */
+    box-shadow: 0px 0px 3px 2px #00000011;
+    background: #fff;
+    top: 50%;
+    left: 50%;
+    max-width: 400px;
+    border-radius: 1rem;
+    transform: translate(-50%, -50%);
+  }
+  .progress-screen .primary-button {
+    margin-bottom: 32px;
+  }
 }
