--- a/src/components/Main/Results/Results.css
+++ b/src/components/Main/Results/Results.css
@@ -11,3 +11,22 @@
 .animal-img {
   width: 80%;
 }
+.wheel-section {
+  margin-top: 24px;
+}
+
+@media screen and (min-width: 768px) {
+  .results-content {
+    display: flex;
+  }
+  .results-content > * {
+    flex: 1;
+  }
+  .wheel-section {
+    margin-top: 0px;
+  }
+  .animal-img {
+    width: 80%;
+    max-width: 360px;
+  }
+}
